--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "yarn@1.22.19",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
